# Temere

./: Cargo.toml  README.md
shuffle-web/: package-lock.json  package.json
shuffle-web/src/: App.js
shuffle-web/src/assets/styles/: footer.scss  global.scss  header.scss  main.scss
shuffle-web/src/components/Button/: index.js  style.js
shuffle-web/src/components/Chat/: index.js  style.js
src/: main.rs
src/app/: lobby.rs  mod.rs  websocket.rs
