[package]
name = "Temere"
version = "0.1.0"
authors = ["Wanderley Alisson <wanderley.alisson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3.2" # duh
actix-web-actors="3.0.0" # actors specific to web
actix = "0.10.0" # actors
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde_json = "1.0.64"